e2e/app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-readiness
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kube-readiness
  template:
    metadata:
      labels:
        app: kube-readiness
    spec:
      readinessGates:
      - conditionType: aws.amazonaws.com/load-balancer-tg-ready
      containers:
      - image: iverberk/kube-readiness:1
        imagePullPolicy: Always
        name: kube-readiness
        args: ["-term-delay", "15"]
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
