e2e/app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-readiness
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: kube-readiness
